--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.5.2
 cloudinary==1.30.0
-dj-database-url==1.2.0
+dj-database-url==0.5.0
 dj-rest-auth==2.2.5
 Django==3.2.16
 django-allauth==0.51.0
@@ -9,6 +9,7 @@ django-filter==22.1
 djangorestframework==3.14.0
 oauthlib==3.2.2
 Pillow==9.3.0
+psycopg2==2.9.5
 PyJWT==2.6.0
 python3-openid==3.2.0
 pytz==2022.6
