--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-cors-headers==3.13.0
 django-filter==22.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+gunicorn==20.1.0
 oauthlib==3.2.2
 Pillow==9.3.0
 psycopg2==2.9.5
